refactor: Addressed PR feedback