@@ -14,6 +14,8 @@ import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 
+
+import static org.opentripplanner.middleware.utils.JsonUtils.getJSONPropertyFieldAsString;
 import static org.opentripplanner.middleware.utils.JsonUtils.getPOJOFromJSONAsList;
 import static org.opentripplanner.middleware.utils.YamlUtils.yamlMapper;
 
@@ -42,42 +44,36 @@ public class ReadMeEnvSchemaValuesUpdater {
         }
         StringBuilder tableData = new StringBuilder("| Key | Type | Required | Default | Description |");
         tableData.append(System.lineSeparator())
-                .append("| --- | --- | --- | --- | --- |")
-                .append(System.lineSeparator());
+            .append("| --- | --- | --- | --- | --- |")
+            .append(System.lineSeparator());
         Iterator<String> propertyNames = envSchema.get("properties").fieldNames();
         List<String> requiredProperties = (envSchema.get("required") != null)
-                ? getPOJOFromJSONAsList(envSchema.get("required"), String.class)
-                : Collections.emptyList();
+            ? getPOJOFromJSONAsList(envSchema.get("required"), String.class)
+            : Collections.emptyList();
         JsonNode properties = envSchema.get("properties");
         while (propertyNames.hasNext()) {
             String propertyName = propertyNames.next();
             JsonNode property = properties.get(propertyName);
-            String type = (property.get("type") != null)
-                    ? property.get("type").toString()
-                    : "";
+            String type = getJSONPropertyFieldAsString(property, "type");
             String required = (requiredProperties
-                    .stream()
-                    .anyMatch(propertyName::equals))
-                    ? "Required"
-                    : "Optional";
-            String defaultValue = (property.get("default") != null)
-                    ? property.get("default").toString()
-                    : "";
-            String description = (property.get("description") != null)
-                    ? property.get("description").toString()
-                    : "";
+                .stream()
+                .anyMatch(propertyName::equals))
+                ? "Required"
+                : "Optional";
+            String defaultValue = getJSONPropertyFieldAsString(property, "default");
+            String description = getJSONPropertyFieldAsString(property, "description");
             tableData.append("| ")
-                    .append(propertyName)
-                    .append(" | ")
-                    .append(type.replaceAll("\"", ""))
-                    .append(" | ")
-                    .append(required)
-                    .append(" | ")
-                    .append(defaultValue.replaceAll("\"", ""))
-                    .append(" | ")
-                    .append(description.replaceAll("\"", ""))
-                    .append(" |")
-                    .append(System.lineSeparator());
+                .append(propertyName)
+                .append(" | ")
+                .append(type.replaceAll("\"", ""))
+                .append(" | ")
+                .append(required)
+                .append(" | ")
+                .append(defaultValue.replaceAll("\"", ""))
+                .append(" | ")
+                .append(description.replaceAll("\"", ""))
+                .append(" |")
+                .append(System.lineSeparator());
         }
         return tableData.toString();
     }
@@ -89,7 +85,7 @@ public class ReadMeEnvSchemaValuesUpdater {
      */
     private static void updateEnvSchemaValues() throws IOException {
         Path readMeFile = new File(LATEST_README_FILE).toPath();
-        String readMeContent = new String(Files.readAllBytes(readMeFile));
+        String readMeContent = Files.readString(readMeFile);
         int envSchemaJsonTitleIndex = readMeContent.indexOf(ENV_SCHEMA_JSON_TITLE);
         if (envSchemaJsonTitleIndex == -1) {
             throw new IllegalArgumentException(String.format("Could not find %s header!", ENV_SCHEMA_JSON_TITLE));
